--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,15 @@
       align-self: center;
       display: table;
       margin: auto auto;
+      background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
+      			url('/assets/background.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      background-size: cover;
+      opacity: 0.9;
+      width: 100%;
+      height: 100%
     }
     h1 {
       text-align: center;
@@ -25,34 +34,35 @@
       display: block;
       max-width: 30rem;
       max-height: 30rem;
+      border-radius: 5px;
     }
     textarea {
       display: table;
-	  margin: 0.5rem auto 0;
+      margin: 0.5rem auto 0;
       padding: 10px;
-	  resize: none;
-	  background-color: black;
-	  color: lightgrey;
-	  border: 5px solid lightgrey;
-	  border-radius: 5px;
-	  font-family: monospace;
-	}
-	input {
+      resize: none;
       background-color: black;
-	  color: lightgrey;
-	  border: 2px solid lightgrey;
-	  border-radius: 4px;
-	  font-family: monospace;
-	  padding: 3px 5px;
-	}
-	input[type=submit] {
-	  font-size: 160%;
-	  padding: 5px 5px;
-	  color: black;
-	  background: silver;
-	  display: table;
-	  margin: 0 auto;
-	}
+      color: lightgrey;
+      border: 5px solid lightgrey;
+      border-radius: 5px;
+      font-family: monospace;
+    }
+    input {
+      background-color: black;
+      color: lightgrey;
+      border: 2px solid lightgrey;
+      border-radius: 4px;
+      font-family: monospace;
+      padding: 3px 5px;
+    }
+    input[type=submit] {
+      font-size: 160%;
+      padding: 5px 5px;
+      color: black;
+      background: silver;
+      display: table;
+      margin: 0 auto;
+    }
 	table, th, td {
 	  border: 3px solid darkgrey;
 	  margin: 2rem auto;
@@ -90,9 +100,89 @@
 	  background-color: rgb(26, 26, 26);
 	  max-width: 40rem;
 	  position: relative;
+	  min-width: 30rem;
+	  min-height: 15rem;
 	}
 	.list {
 	  margin: 0 0;
 	  margin-bottom: 0.5rem;
 	  text-align: left;
+	}
+	/* records checkboxes */
+	.modeLi {
+	  width: auto;
+	  height: 1rem;
+	  display: block; 
+	  align-items: center;
+	  position: relative;
+	}
+	.modeLabel {
+	  width: 20px;
+	  height: 20px;
+	  position: relative;
+	  display: inline-block;
+	  text-align: left;
+	} 
+	.modeLabel span {
+	  position: absolute;
+	  min-width: 200px;
+	  margin-left: 0.25rem;
+	  top: 0.3rem;
+	}
+	.modeBox, .reverseBox {
+	  appearance: none;
+	  width: 24px;
+	  height: 24px;
+	  border-radius: 50%;
+	  border: 2px solid grey;
+	  background: lightgrey;
+	  transition: all 0.4s;
+	  margin-left: 0.5rem;
+	  position: relative;
+	  vertical-align: bottom;
+	  bottom: -5px;
+	}
+	.modeBox::after {
+	  content: '💣';
+	  font-size: 150%;
+	  position: relative;
+          top: -4px;
+	  left: -2.5px;
+	}
+	.reverseBox::after {
+	  content: '🔺';
+	  font-size: 150%;
+	  position: relative;
+          top: -3px;
+	  left: -5px;
+	}
+	.modeBox:checked, .reverseBox:checked {
+	  background-color: darkgray;
+	  border: 2px solid black;
+	  transition: all 0.4s;
+	}
+	.modeBox:checked::after {
+	  content: '⏱';
+	  position: relative;
+	  font-size: 150%;
+	  top: -5px;
+	  left: -7px;
+	}
+	.reverseBox:checked::after {
+	  content: '🔻';
+	  position: relative;
+	  font-size: 150%;
+	  top: -2px;
+	  left: -5px;
+	}
+	input ~ .modeLabel .on,
+input:checked ~ .modeLabel .off {
+	  opacity: 1;
+	}
+	input ~ .modeLabel .off,
+input:checked ~ .modeLabel .on {
+	  opacity: 0;
+	}
+	.modeBox:focus, .reverseBox:focus {
+	  outline: 1px dotted white;
 	}
